# matmul.c

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.c  benchmark.sh  benchmark_matmul.txt  benchmark_mkl.txt  benchmark_numpy.py  benchmark_openblas.txt  format.sh  matmul.c  matmul_gcc.c  plot_benchmark.py  plot_data.c  readme.md  requirements.txt  test.c  test.sh
assets/core_ultra_265_perf/: GEMM.txt  Intel oneAPI MKL 2025-01.txt
assets/ryzen7700_perf/: benchmark_matmul.txt  benchmark_mkl.txt  benchmark_openblas.txt
assets/ryzen9700x_perf/: benchmark_matmul.txt  benchmark_openblas.txt
assets/ryzen_9700x_perf/: Custom GEMM.txt  OpenBLAS v0-3-26 TARGET=ZEN.txt
common/: helper_matrix.h  utils.h
experimental/: pack_mask.c
experimental/bf16_llama/: main.c
experimental/llama/: benchmark_llama.c  matmul_llama.c  plot_benchmark.py
kernels/: avx2.c
python/: gemm_numpy.py  gemm_torch.py
scripts/: benchmark.sh  benchmark_matmul.sh  benchmark_openblas.sh  format.sh  plot_data.sh  test.sh
src/: CMakeLists.txt  avx2_kernels.h  kernel.c  kernel.h  matmul.c  matmul.h
tutorial/: README.md  benchmark_mt.c  benchmark_numpy.py  benchmark_st.c  helper.h  matmul_cache.c  matmul_cache.h  matmul_kernel.c  matmul_kernel.h  matmul_micro.h  matmul_naive.c  matmul_naive.h  matmul_optimized_kernel.c  matmul_pack_mask.c  matmul_pad.h  matmul_parallel.c  matmul_parallel.h  runner.c
